// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "ie.gmit.sw";

 
// The Password service definition.
service PasswordService {
  // Hash and validate
  rpc HashService (Hash) returns (HashResponse) {}
  rpc ValidateService (Validate) returns (ValidateResponse) {}
  
}

// Hash function which will have 2 params userID and password
message Hash {
  int32 userID = 1;
  string password = 2;
}

//validate function 3 params password, hashedPassword and salt
message Validate {
  string password = 1;
  string hashedPassword = 2;
  string salt = 3;
}
message HashResponse{
int32 userID = 1;
string hashedPassword = 2;
string salt = 3;
}
message ValidateResponse{
bool validPassword = 1;
}
